fixed hero text margin when on mobile screen

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -78,6 +78,9 @@
   .hero-title {
     font-size: 2.7rem;
   }
+  .hero-wrapper {
+    margin-top: 10rem;
+  }
 }
 /* menu list */
 .custom-grid {
